fix: solved tooltip z-index on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -144,7 +144,7 @@
   outline: none;
   appearance: none;
   -webkit-appearance: none;
-  z-index: 999;
+  z-index: 999999;
   opacity: 0;
   cursor: pointer;
 }
